# serializer version: 1
# name: test_mower_snapshot[battery]
  dict({
    'battery_percent': 50,
  })
# ---
# name: test_mower_snapshot[calendar]
  dict({
    'tasks': list([
      dict({
        'duration': datetime.timedelta(seconds=2940),
        'friday': False,
        'monday': True,
        'saturday': False,
        'start': datetime.time(2, 0),
        'sunday': False,
        'thursday': False,
        'tuesday': False,
        'wednesday': False,
        'work_area_id': None,
      }),
    ]),
  })
# ---
# name: test_mower_snapshot[capabilities]
  dict({
    'can_confirm_error': False,
    'headlights': False,
    'position': False,
    'stay_out_zones': False,
    'work_areas': False,
  })
# ---
# name: test_mower_snapshot[metadata]
  dict({
    'connected': True,
    'status_dateteime': FakeDatetime(2023, 10, 18, 22, 58, 52, 683000, tzinfo=datetime.timezone.utc),
  })
# ---
# name: test_mower_snapshot[mower]
  dict({
    'activity': 'parked_in_cs',
    'error_code': 1,
    'error_datetime': FakeDatetime(2024, 10, 18, 16, 37, 49, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
    'error_datetime_naive': FakeDatetime(2024, 10, 18, 16, 37, 49),
    'error_key': 'outside_working_area',
    'error_timestamp': 1729269469000,
    'inactive_reason': 'none',
    'is_error_confirmable': False,
    'mode': 'main_area',
    'state': 'restricted',
    'work_area_id': None,
    'work_area_name': None,
  })
# ---
# name: test_mower_snapshot[planner]
  dict({
    'next_start': 1685991600000,
    'next_start_datetime': FakeDatetime(2023, 6, 5, 19, 0, tzinfo=zoneinfo.ZoneInfo(key='Europe/Berlin')),
    'next_start_datetime_naive': FakeDatetime(2023, 6, 5, 19, 0),
    'override': dict({
      'action': 'not_active',
    }),
    'restricted_reason': 'week_schedule',
  })
# ---
# name: test_mower_snapshot[positions]
  list([
  ])
# ---
# name: test_mower_snapshot[settings]
  dict({
    'cutting_height': None,
    'headlight': dict({
      'mode': None,
    }),
  })
# ---
# name: test_mower_snapshot[statistics]
  dict({
    'cutting_blade_usage_time': None,
    'number_of_charging_cycles': None,
    'number_of_collisions': None,
    'total_charging_time': None,
    'total_cutting_time': None,
    'total_drive_distance': None,
    'total_running_time': None,
    'total_searching_time': None,
  })
# ---
# name: test_mower_snapshot[stay_out_zones]
  None
# ---
# name: test_mower_snapshot[system]
  dict({
    'model': 'Automower Aspire',
    'name': 'Test Mower 1',
    'serial_number': '123',
  })
# ---
# name: test_mower_snapshot[work_area_dict]
  None
# ---
# name: test_mower_snapshot[work_area_names]
  None
# ---
# name: test_mower_snapshot[work_areas]
  None
# ---
